--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,4 @@
-/*** Ee-write Twitter Bootstrap styles ***/
+/*** Re-write Twitter Bootstrap styles ***/
 .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container, .container {
     width: 1260px;
 }
