--- a/application/modules/planner/views/scripts/layout.phtml
+++ b/application/modules/planner/views/scripts/layout.phtml
@@ -63,8 +63,8 @@
                         Overzicht
                     </a>
                 </li>
-                <li <?php if ($this->activeMenu == 'alert'): ?>class="active"<?php endif; ?>>
-                    <a href="<?php echo $this->url(array('controller' => 'alert'), 'planner', true) ?>">
+                <li <?php if ($this->activeMenu == 'alerts'): ?>class="active"<?php endif; ?>>
+                    <a href="<?php echo $this->url(array('controller' => 'alerts'), 'planner', true) ?>">
                         Alerts
                     </a>
                 </li>
