--- a/application/modules/planner/views/scripts/requests/index.phtml
+++ b/application/modules/planner/views/scripts/requests/index.phtml
@@ -25,5 +25,50 @@
     <div class="span12">
         <span class="param-name">Geselecteerd is:</span> <span class="request-calendar-selected-days"></span>
     </div>
+    <div class="span6">
+        <input class="btn btn-success pull-right" type="button" id="save-request" value="Submit">
+    </div>
 </div>
 
+<div class="span12">
+    <table class="table requests-table table-hover">
+        <tbody>
+        <tr>
+            <td class="span3">
+                Openstaande aanvragen:
+            </td>
+            <td>
+                05-02-2013
+                <button class="btn show-in-calendar pull-right" data-selected-dates='2013-02-05' data-show-date='2013-02-01'><span class="icon-eye-open"></span></button>
+            </td>
+        </tr>
+        <tr>
+            <td class="span3">
+                Geaccordeerde aanvragen:
+            </td>
+            <td>
+                07-06-2012, 08-06-2012
+                <button class="btn show-in-calendar pull-right" data-selected-dates='2013-02-05' data-show-date='2013-02-01'><span class="icon-eye-open"></span></button>
+            </td>
+        </tr>
+        <tr>
+            <td class="span3">
+                Afgewezen dagen:
+            </td>
+            <td>
+                05-02-2013
+                <button class="btn show-in-calendar pull-right" data-selected-dates='2013-02-05' data-show-date='2013-02-01'><span class="icon-eye-open"></span></button>
+            </td>
+        </tr>
+        <tr>
+            <td class="span3">
+                Historische dagen dit jaar:
+            </td>
+            <td>
+
+                <button class="btn show-in-calendar pull-right" data-selected-dates='2013-02-05' data-show-date='2013-02-01'><span class="icon-eye-open"></span></button>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
