--- a/application/modules/planner/views/scripts/layout.phtml
+++ b/application/modules/planner/views/scripts/layout.phtml
@@ -86,9 +86,24 @@
         </div>
     </div>
 </div>
+
 <div class="container" id="container">
     <?php echo $this->layout()->content ?>
 </div>
+
+<div class="modal hide span12 popup" id="mainPopup">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
+        <h3></h3>
+    </div>
+    <div class="modal-body">
+        <p class="modal-body-p"></p>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary button-submit">Save</button>
+    </div>
+</div>
+
 <?php echo $this->headScript(); ?>
 </body>
 </html>
