--- a/application/modules/planner/views/scripts/planning/_blocks/group_row.phtml
+++ b/application/modules/planner/views/scripts/planning/_blocks/group_row.phtml
@@ -28,7 +28,7 @@
 
                 <thead>
                 <tr  >
-                    <th  colspan="5"  ></th>
+                    <th  colspan="6"  ></th>
                     <th  style="background-color: #<?php echo $this->group['color'];?>" >
                         <a href="#" class="bootstrab-tooltip no-action get-week-details" >
                             Week <?php echo $this->week; ?>
@@ -49,6 +49,7 @@
                     <th class="week-table-header-thursday week-table-header-day">Donderdag</th>
                     <th class="week-table-header-friday week-table-header-day">Vrijdag</th>
                     <th class="week-table-header-saturday week-table-header-day">Zaterdag</th>
+                    <th class="week-table-header-saturday week-table-header-day">Zondag</th>
                 </tr>
                 </thead>
                 <tbody>
